# inclusive-alc-sim

./: .gitignore  README.md
.github/workflows/: ci.yaml
results/: Untitled.ipynb
ros2_ws/: .colcon_build_config  QUICK_START.md  README_BUILD.md  README_SETUP.md  build_quiet.sh  fix_setup_bash.sh  run_missing_simulations.sh  source_workspace.sh  source_workspace.zsh  test_sourcing.sh
ros2_ws/src/alc_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/alc_bringup/launch/: full_system.launch.py
ros2_ws/src/alc_core/: package.xml  setup.cfg  setup.py
ros2_ws/src/alc_core/alc_core/nodes/: disability_sim_node.py  learner_model_node.py  logger_node.py  policy_node.py  tutor_interface_node.py  tutor_policy_node.py
ros2_ws/src/alc_core/alc_core/utils/: __init__.py  models.py  reward.py
ros2_ws/src/alc_description/: package.xml  setup.cfg  setup.py
ros2_ws/src/alc_description/urdf/: alc_robot.urdf.xacro
ros2_ws/src/alc_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/alc_interfaces/msg/: LearnerState.msg  Placeholder.msg  TrialOutcome.msg  TutorAction.msg
ros2_ws/src/alc_simulation/: package.xml  setup.cfg  setup.py
ros2_ws/src/alc_simulation/launch/: bridge.launch.py  sim.launch.py
ros2_ws/src/alc_simulation/worlds/: classroom.sdf
scripts/: README.md  analyze_batch.py  analyze_run.py  check_missing_runs.py  generate_figure_4_2.py  generate_figure_4_3.py  generate_figure_5_1_errors.py  generate_figure_5_2_accessibility_mismatch.py  generate_figure_5_2_accessibility_mismatch_new.py  generate_figure_5_3_policy_convergence.py  generate_figure_5_3_response_latency.py  generate_table_5_1.py  generate_table_5_1_from_logs.py  generate_table_5_1_from_raw_logs.py  generate_table_5_2_cognitive_load.py  generate_table_5_3_cross_condition.py  generate_table_5_3_cross_condition_true_errors.py  generate_table_from_logs.py  make_fig_4_1.py  parameter_sanity_check.py  run_batch_simulations.py  run_inclusive_adaptive_auto.py  run_inclusive_adaptive_auto.py.bak  run_until_complete.py
