<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alc_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and configuration for bringing up the full ALC simulation system</description>
  <maintainer email="59618908+kessellyalton@users.noreply.github.com">alton</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>alc_simulation</depend>
  <depend>alc_description</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
