<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alc_simulation</name>
  <version>0.0.0</version>
  <description>Gazebo simulation setup, world files, and ROS-Gazebo bridge configuration</description>
  <maintainer email="59618908+kessellyalton@users.noreply.github.com">alton</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>alc_core</depend>
  <depend>alc_description</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>xacro</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
